--- a/pubsub/Cargo.toml
+++ b/pubsub/Cargo.toml
@@ -12,7 +12,7 @@ version = "17.0.0"
 
 [dependencies]
 futures = { version = "0.3", features = ["thread-pool"] }
-jsonrpc-core = { version = "17.0", path = "../core" }
+jsonrpc-core = "17.0"
 lazy_static = "1.4"
 log = "0.4"
 parking_lot = "0.11.0"
